Fix link size on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -774,6 +774,7 @@ aside {
     }
     .links {
         margin: 1.25rem 0;
+        font-size: 1.75rem;
     }
     .posts li {
         margin-top: 2rem;
